# LarpO

./: .gitignore  bot.py  config.ini  config.py  ollama.py  pyproject.toml  readme.md  requirements.txt  shell.nix  utils.py
